# pie

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/agent/src/harness/: agent_harness.rs  permission.rs
crates/agent/src/harness/env/: native.rs
crates/agent/tests/: harness_e2e.rs
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs  sigv4.rs
crates/coding-agent/: Cargo.toml
crates/coding-agent/src/: commands.rs  export.rs  extensions.rs  hooks.rs  local_models.rs  logging.rs  main.rs  mcp_loader.rs  model.rs  otlp.rs  readline.rs  skills.rs  skills_state.rs  spinner.rs
crates/coding-agent/src/tools/: bash.rs  git.rs  install_skill.rs  mod.rs  remove_skill.rs  web_search.rs
crates/coding-agent/src/triggers/: dynamic.rs  mod.rs
crates/coding-agent/src/ui/: feed.rs  listener.rs  mod.rs  web.rs
crates/coding-agent/tests/: cli_help.rs  cli_skills.rs  commands.rs  export_e2e.rs  git_tool_e2e.rs  hooks_e2e.rs  spinner_e2e.rs  web_search_e2e.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  errors.rs  lib.rs  protocol.rs  stdio.rs  transport.rs
crates/mcp/tests/: client_fixture.rs
docs/: hooks.md  web-ui-parity.md
docs/issues/: 00-master.md  01-tui-overhaul.md  02-slash-commands.md  03-approval-permissions.md  04-file-mentions-session-picker.md  05-continue-named-sessions.md  06-token-cost-budget.md  07-sandboxing.md  08-mcp-client.md  09-extensions-skills.md  10-subagents.md  11-builtin-capabilities.md  12-login-oauth.md  13-bedrock-vertex.md  14-observability.md  15-windows-multimodal.md  17-harness-expansion.md
examples/mcp-weather-python/: README.md  mcp.toml  weather-server.py
