[package]
name = "pie-coding-agent"
version = "0.75.0"
edition = "2024"
rust-version = "1.85"
description = "Minimal coding agent CLI on top of pie-agent-core — REPL TUI, built-in filesystem + shell tools, jsonl sessions with --resume, cross-session memory."
license = "MIT"
authors = ["earendil-works"]

[[bin]]
name = "pie"
path = "src/main.rs"

[dependencies]
# Enable every wire-protocol provider so model auto-detection isn't bottlenecked by feature
# flags. The cost is compile time, not runtime — only the registered provider for the chosen
# model's `api` actually gets exercised.
pie-ai = { path = "../ai", default-features = false, features = ["all-providers"] }
pie-agent-core = { path = "../agent" }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "io-std", "process", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
once_cell = "1"
regex = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v7", "v4", "serde"] }
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
sha2 = "0.10"
hex = "0.4"
directories = "5"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
