[package]
name = "pie-coding-agent"
version = "0.75.0"
edition = "2024"
rust-version = "1.85"
description = "Minimal coding agent CLI on top of pie-agent-core — REPL TUI, built-in filesystem + shell tools, jsonl sessions with --resume, cross-session memory."
license = "MIT"
authors = ["earendil-works"]

[[bin]]
name = "pie"
path = "src/main.rs"

[dependencies]
# Enable every wire-protocol provider so model auto-detection isn't bottlenecked by feature
# flags. The cost is compile time, not runtime — only the registered provider for the chosen
# model's `api` actually gets exercised.
pie-ai = { path = "../ai", default-features = false, features = ["all-providers"] }
pie-agent-core = { path = "../agent" }
pie-mcp = { path = "../mcp" }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "io-std", "process", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
rpassword = "7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "stream"] }
base64 = "0.22"
toml = "0.8"
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
once_cell = "1"
regex = "1"
axum = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v7", "v4", "serde"] }
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
tui-textarea = "0.7"
unicode-width = "0.2"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
sha2 = "0.10"
hex = "0.4"
serde_yaml = "0.9"
directories = "5"

[target.'cfg(unix)'.dependencies]
# Unix-only: process-group teardown (`setsid` + `killpg`) for `bash` tool and shell
# hooks. Direct SIGKILL on the shell PID leaks descendants like `(sleep 60) & wait`;
# running the child in its own process group lets us KILL the whole tree on
# timeout/cancel. Same pattern as `NativeEnv::exec` (PR #40), the bash tool (PR #41),
# and shell hooks (PR #58).
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
