[package]
name = "pie-mcp"
version = "0.75.0"
edition = "2024"
rust-version = "1.85"
description = "Minimal MCP (Model Context Protocol) stdio client for the pie agent harness."
license = "MIT"
authors = ["earendil-works"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
parking_lot = "0.12"
futures = "0.3"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[lints]
workspace = true
